# cmakeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
.github/workflows/: build.yml
actions_utils/: upload_to_github_release.py  write_version.py
cmakeg/: CMakeLists.txt
cmakeg/assets/DynamicLibraryProjectTemplate/: CMakeLists.txt
cmakeg/assets/DynamicLibraryProjectTemplate/include/DynamicLibraryProjectTemplate/: Computer.hpp
cmakeg/assets/DynamicLibraryProjectTemplate/src/: Computer.cpp
cmakeg/assets/DynamicLibraryProjectWithoutWorkspaceTemplate/: CMakeLists.txt  README.md
cmakeg/assets/DynamicLibraryProjectWithoutWorkspaceTemplate/include/DynamicLibraryProjectWithoutWorkspaceTemplate/: Computer.hpp
cmakeg/assets/DynamicLibraryProjectWithoutWorkspaceTemplate/src/: Computer.cpp
cmakeg/assets/ExecutableProjectTemplate/: CMakeLists.txt
cmakeg/assets/ExecutableProjectTemplate/src/: main.cpp
cmakeg/assets/ExecutableProjectWithoutWorkspaceTemplate/: CMakeLists.txt  build.py
cmakeg/assets/ExecutableProjectWithoutWorkspaceTemplate/src/: main.cpp
cmakeg/assets/LibraryProjectTemplate/: CMakeLists.txt
cmakeg/assets/LibraryProjectWithoutWorkspaceTemplate/: CMakeLists.txt
cmakeg/assets/StaticLibraryProjectTemplate/: CMakeLists.txt
cmakeg/assets/StaticLibraryProjectTemplate/include/StaticLibraryProjectTemplate/: Computer.hpp
cmakeg/assets/StaticLibraryProjectTemplate/src/: Computer.cpp
cmakeg/assets/StaticLibraryProjectWithoutWorkspaceTemplate/: CMakeLists.txt  build.py
cmakeg/assets/StaticLibraryProjectWithoutWorkspaceTemplate/include/StaticLibraryProjectWithoutWorkspaceTemplate/: Computer.hpp
cmakeg/assets/StaticLibraryProjectWithoutWorkspaceTemplate/src/: Computer.cpp
cmakeg/assets/WorkspaceTemplate/: .gitignore  CMakeLists.txt  README.md  build.py
cmakeg/src/: main.cpp
cmakeg/src/commands/: CommandHandler.cpp  CommandHandler.hpp  DeleteProjectCommandHandler.cpp  DeleteProjectCommandHandler.hpp  DynamicLibraryProjectCommandHandler.cpp  DynamicLibraryProjectCommandHandler.hpp  ExecutableProjectCommandHandler.cpp  ExecutableProjectCommandHandler.hpp  ExecutableWorkspaceProjectCommandHandler.cpp  ExecutableWorkspaceProjectCommandHandler.hpp  LibraryProjectCommandHandler.cpp  LibraryProjectCommandHandler.hpp  ReferenceCommandHandler.cpp  ReferenceCommandHandler.hpp  StaticLibraryProjectCommandHandler.cpp  StaticLibraryProjectCommandHandler.hpp  VersionCommandHandler.cpp  VersionCommandHandler.hpp  WorkspaceCommandHandler.cpp  WorkspaceCommandHandler.hpp
cmakeg/src/utils/: filesystem_utils.cpp  filesystem_utils.hpp  global.hpp  main.cpp
installers/linux-x86_64/: install_permissions.sh  installer_script.py  uninstall.sh
installers/windows-amd64/: installer_script.iss
